css/block/ucb-article-list-block.css
.ucb-article-list-block-button-container {
  text-align: right;
}

.ucb-article-list-block-button {
  font-weight: normal;
  margin: 0;
}

/* .ucb-article-list-block-button:hover{
  transition: background-color 0.25s ease, border-color 0.25s ease, color 0.25s ease;
  background-color: #0277BD;
  color: white !important;
} */

.ucb-article-card {
  margin-bottom: 20px;
  border-bottom: solid 1px rgba(128, 128, 128, 0.333);
  padding-bottom: 20px;
}

.ucb-article-card-title-only {
  padding-bottom: 20px;
}

.ucb-article-card-img {
  width: 100px;
  height: 100px;
  padding: 0px;
}

.ucb-article-card-img.title-thumbnail-img {
  width: 65px;
  height: 65px;
  padding: 0px;
}

.ucb-article-card-img-wide {
  height: 500px !important;
  object-fit: cover !important;
  margin-bottom: 10px;
  width: 100%;
}

.ucb-article-card-img-full {
  width: 100% !important;
  margin-bottom: 10px;

}

.ucb-article-card-date {
  font-size: 85%;
  line-height: 85%;
  margin-bottom: 10px;
}

.ucb-article-card-read-more {
  text-transform: uppercase;
  font-weight: 600;
  font-size: 75%;
}

.ucb-article-card-summary {
  margin-bottom: 0px;
}

.ucb-article-card-title {
  font-size: 120%;
  font-weight: normal;
  margin: 0;
  line-height: 1.3;
}
.ucb-article-card-title-feature {
    font-size: 130%;
    font-weight: bolder;
    margin: 0 0 10px 0;
    line-height: 1.3;
}

.ucb-article-card-title-teaser{
  display: block;
}

@media only screen and (max-width: 600px) {
  .ucb-article-card-img {
    width: 50px;
    height: 50px;
    padding: 0px;
  }

  .ucb-article-card-img.title-thumbnail-img {
    width: 50px;
    height: 50px;
    padding: 0px;
  }
}

